[package]
name = "heddle-mount"
version = "0.2.4"
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
bytes.workspace = true
libc.workspace = true
# Bounded LRU cache for materialised blob bytes. Read benchmarks
# showed chunked / mmap-style reads were dominated by re-hydrating
# the same blob from the object store on every kernel `read` call.
# This cache short-circuits that into an `Arc<[u8]>` clone.
lru = { workspace = true }
objects = { path = "../objects", package = "heddle-objects", version = "0.2" }
oplog = { path = "../oplog", package = "heddle-oplog", version = "0.2" }
refs = { path = "../refs", package = "heddle-refs", version = "0.2" }
repo = { path = "../repo", package = "heddle-repo", version = "0.2" }
# `serde`/`serde_json` carry the framed control-plane messages between
# the `heddle-fuse-worker` subprocess and its supervisor (CLI or
# daemon). The framing lives in `src/worker.rs`; both ends of the
# Unix socketpair encode/decode the same `WorkerEvent` / `Supervisor
# Command` enum. JSON is the pragmatic first-cut transport — gRPC is
# the spike's recommendation but it pulls tonic + a proto into the
# `heddle-mount` build for what is currently a four-message surface;
# we revisit when the daemon-supervisor (heddle#88 §4) lands.
serde = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true }

# NFS fallback adapter — only built when the `nfs` feature is on.
# Unlike `fuse`/`fskit`/`projfs` (which target one OS each), the
# NFS shell is platform-agnostic: it stands up an in-process
# NFSv3 server bound to localhost and asks the host's built-in
# NFS client to mount it. Works wherever the kernel ships an NFS
# client (Linux, macOS, Windows w/ NFS client feature).
async-trait = { workspace = true, optional = true }
nfsserve = { version = "0.10", optional = true }
tokio = { workspace = true, optional = true }

# `fuser` provides the FUSE bindings on Linux. Gated behind the
# `fuse` feature so the crate still builds (without a mountable
# shell) on macOS/Windows. The crate itself is target-gated to
# Linux, so on other platforms the dep is a no-op even if the
# feature is on by accident.
[target.'cfg(target_os = "linux")'.dependencies]
fuser = { version = "0.17", optional = true }

# `windows` provides the ProjFS bindings on Windows. Gated behind
# the `projfs` feature mirroring `fuse`/`fskit`. The `Foundation`
# and `Win32_System_Com` features are pulled in transitively by the
# ProjFS API surface (GUIDs, HRESULTs, IIDs). Target-gated to
# Windows so non-Windows builds with `projfs` accidentally enabled
# get a no-op rather than a download.
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Storage_ProjectedFileSystem",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
], optional = true }

[dev-dependencies]
chrono.workspace = true
criterion = "0.8"
# Used by the Linux mount integration tests to exercise the
# `mmap(MAP_SHARED, ...)` path on mounted files. Required for the
# `fuse_mount_serves_mmap_readers` regression test that locks in
# `FUSE_DIRECT_IO_ALLOW_MMAP` opt-in (kernel 5.16+).
memmap2.workspace = true
proptest.workspace = true
tempfile.workspace = true

# Cross-platform PlatformShell microbench. Walks `lookup`, `read`,
# `enumerate`, `attrs` against both `ContentAddressedMount` and a
# `std::fs` baseline so we can see how far each operation sits from
# vanilla-FS time.
[[bench]]
name = "mount_read_paths"
harness = false

# Linux FUSE end-to-end bench. Drives the mount through a real
# `FuseShell::mount_background` session so every read pays the
# kernel ↔ FUSE round-trip. Pairs each workload (sequential read,
# mmap, concurrent read, random read, stat-storm, write throughput,
# lifecycle) with a vanilla-ext4 `std::fs` baseline so the overhead
# of the FUSE adapter + content-addressed core is visible at the
# kernel boundary the daily user actually pays. Requires Linux +
# `--features fuse`; the file is `cfg`-gated so non-Linux feature
# combos still compile cleanly. See `benches/fuse_e2e.rs`.
[[bench]]
name = "fuse_e2e"
harness = false
required-features = ["fuse"]

# Worker-supervisor control-plane RTT. Spawns `heddle-fuse-worker`
# under a real FUSE mount, measures the round-trip cost of the
# `Status` IPC roundtrip from the parent, and asserts the budget
# in `crates/mount/src/worker.rs` stays inside the spike's
# < 1 ms ceiling for non-callback control surfaces (heddle#88 §7).
[[bench]]
name = "fuse_worker_ipc"
harness = false
required-features = ["fuse"]

[features]
default = []
# Enable the FUSE shell. Linux-only; on other platforms the
# `FuseShell` type and its module simply don't compile in.
fuse = ["dep:fuser"]
# Enable the FSKit shell. macOS-only (15.4+); on other platforms
# the `FSKitShell` type and its module simply don't compile in.
# The build.rs picks this feature up on macOS to compile the
# Swift adapter at `swift/HeddleFSKit/` into a static lib and
# link it. The C ABI is declared once in `src/fskit/c_abi.rs`;
# `cbindgen` regenerates the Swift bridging header from it at
# build time.
fskit = ["dep:cbindgen"]
# Enable the ProjFS shell. Windows-only; on other platforms the
# `ProjFsShell` type and its module simply don't compile in. The
# `windows` dep is target-gated to Windows so a non-Windows build
# with `--all-features` doesn't try to pull in the win32 bindings.
# Requires the Windows "Projected File System" optional feature to
# actually mount at runtime — see `ProjFsShell::is_runtime_available`.
projfs = ["dep:windows"]
# Enable the NFS fallback shell. Platform-agnostic: spawns an
# in-process NFSv3 server on 127.0.0.1:<ephemeral> and shells out
# to the host's `mount` (or `mount.exe` on Windows) to attach it.
# Used by the CLI's mount lifecycle as the safety net when the
# host's native adapter (FUSE/FSKit/ProjFS) is unavailable —
# missing kernel modules, missing System Extension, missing
# optional features, etc. Sudo/admin is required to mount NFS on
# every supported OS; if that's unacceptable the caller should
# fix the native adapter rather than rely on this.
nfs = ["dep:nfsserve", "dep:tokio", "dep:async-trait"]

[build-dependencies]
# `cbindgen` regenerates the FSKit Swift bridging header from the
# Rust C-ABI module (`src/fskit/c_abi.rs`) so a callback added in
# Rust automatically propagates to Swift, and a mismatch becomes a
# `swiftc` compile error rather than runtime UB. Gated behind the
# `fskit` feature: Linux builds (the common case) skip the dep
# entirely, and `--all-features` on Linux still compiles cleanly
# because the build-script no-ops on non-macOS targets.
cbindgen = { version = "0.29", default-features = false, optional = true }

# The `heddle-fuse-worker` binary lives in `crates/cli` (see
# `crates/cli/Cargo.toml`'s `[[bin]]` for it). The mount crate exposes
# the worker entry points (`worker::run_worker`, `worker::WorkerArgs`)
# as a public API; the binary in cli is the thin `main` shim. This
# split is deliberate — `cargo install --path crates/cli` (the
# documented install flow) needs to drop both `heddle` and
# `heddle-fuse-worker` into the same bin dir for the sibling-binary
# lookup in `worker::default_worker_binary` to resolve. Registering
# the bin only in cli (rather than here) is what makes that work
# without changing the install command (heddle#190 r4 / Codex PR
# #225 P1).

[lib]
path = "src/lib.rs"
name = "mount"
# `rlib` for the rest of the Rust workspace; `staticlib` for the
# macOS System Extension (`crates/mount/swift/HeddleHost/HeddleFSModule`)
# which links the resulting `libmount.a` directly. The staticlib
# variant is only meaningful with `--features fskit`; on other
# feature sets it's an empty extra artefact that costs a few MB of
# `target/` and nothing else.
crate-type = ["rlib", "staticlib"]
