[package]
name = "heddle-oplog"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
chrono.workspace = true
objects = { path = "../objects", package = "heddle-objects", version = "0.5" }
rmp-serde.workspace = true
serde.workspace = true
uuid.workspace = true

[dev-dependencies]
criterion = "0.8"
pollster = "0.4"
tempfile.workspace = true

[features]
bench = []

[lib]
path = "src/lib.rs"
name = "oplog"
bench = false

[[bench]]
name = "oplog_io"
harness = false
required-features = ["bench"]
