[package]
name = "heddle-oplog"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
chrono.workspace = true
heddle-schema = { path = "../schema", version = "0.5" }
objects = { path = "../objects", package = "heddle-objects", version = "0.5" }
rmp-serde.workspace = true
serde.workspace = true

runtime-bridge = { path = "../runtime-bridge", package = "heddle-runtime-bridge", version = "0.5", optional = true }
serde_json = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
uuid.workspace = true

[dev-dependencies]
criterion = "0.8"
pollster = "0.4"
tempfile.workspace = true

[features]
bench = []
postgres = ["dep:serde_json", "dep:sqlx", "dep:tokio", "dep:runtime-bridge"]

[lib]
path = "src/lib.rs"
name = "oplog"
bench = false

[[bench]]
name = "oplog_io"
harness = false
required-features = ["bench"]
