[package]
name = "heddle-refs"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
chrono.workspace = true
fs2.workspace = true
objects = { path = "../objects", package = "heddle-objects", version = "0.5" }
rand.workspace = true
rmp-serde.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
criterion = "0.8"
pollster = "0.4"
tempfile.workspace = true

[lib]
path = "src/lib.rs"
name = "refs"

[[bench]]
name = "reftable_vs_packed"
harness = false
