[package]
name = "heddle-repo"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
blake3.workspace = true
chrono.workspace = true
hex.workspace = true
ignore.workspace = true
libc.workspace = true
objects = { path = "../objects", package = "heddle-objects", version = "0.10" }
crypto = { path = "../crypto", package = "heddle-crypto", version = "0.10" }
oplog = { path = "../oplog", package = "heddle-oplog", version = "0.10" }
wire = { path = "../wire", package = "heddle-wire", version = "0.10", default-features = false }
refs = { path = "../refs", package = "heddle-refs", version = "0.10" }
notify.workspace = true
rmp-serde.workspace = true
rusqlite.workspace = true
semantic = { path = "../semantic", package = "heddle-semantic", version = "0.10", optional = true }
state_review = { path = "../state_review", package = "heddle-state-review", version = "0.10", optional = true }
serde.workspace = true
serde_json.workspace = true
sley.workspace = true
tempfile.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true

[target.'cfg(windows)'.dependencies]
# Needed for `GetFileInformationByHandleEx` / `FILE_ID_INFO` so the
# Windows variant of `stat_signature` can return a real per-file
# identity (NTFS file ID + volume serial) instead of a constant 0.
# See `crates/repo/src/stat_signature.rs` for the bug context.
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
] }

[features]
default = ["git-overlay", "native", "zstd"]
# Repository mode features. At least one must be enabled. The OSS CLI
# can be built as git-overlay-only (works on top of existing Git repos),
# native-only (content-addressed VCS, no Git Projection import/export surface), or both.
# Pure overlay query types/methods on `Repository` are gated behind
# `git-overlay` (`GitOverlayBranchTip` / `git_overlay_branch_tips` and kin).
# Open-path helpers and capability plumbing still compile under native so
# capability detection can no-op; full extraction of every overlay symbol
# remains follow-on work. Default features keep the OSS CLI overlay-enabled.
git-overlay = []
native = []
# Forward zstd compression through to objects (where the pack
# format lives) and wire (which uses pack via the sync
# protocol). Default-on so a plain `cargo build` keeps compression;
# turn off with `--no-default-features` for raw packs.
zstd = ["objects/zstd", "wire/zstd"]
# Symbol resolution. The implementation lives in `semantic`;
# enabling the feature here pulls in the dep with the parsers our
# resolver supports. `semantic`'s `common-languages` covers Rust,
# Python, JS, TS; `lang-go` adds Go; `lang-zig` adds Zig (ghostty and
# other Zig-heavy git-lane imports).
tree-sitter-symbols = [
    "dep:semantic",
    "semantic/lang-go",
    "semantic/lang-zig",
    "dep:state_review",
]
# Alias so that `--workspace --features semantic` (used by the
# Coverage CI job) resolves cleanly across all crates.  The dep is
# declared with the `dep:` prefix, so Cargo does not auto-create an
# implicit `semantic` feature; this line makes it explicit.
semantic = ["tree-sitter-symbols"]
async-source = ["objects/async-source"]

[dev-dependencies]
hex.workspace = true
objects = { path = "../objects", package = "heddle-objects", version = "0.10", features = ["async-source", "memory-backend"] }
tempfile.workspace = true

[lib]
path = "src/lib.rs"
name = "repo"
