[package]
name = "heddle-state-review"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
objects = { path = "../objects", package = "heddle-objects", version = "0.7" }
semantic = { path = "../semantic", package = "heddle-semantic", version = "0.7" }
serde.workspace = true

[lib]
path = "src/lib.rs"
name = "state_review"
