[package]
name = "weft-client-shim"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Trait surface for client extensions to the Heddle CLI. OSS default is a noop impl; closed builds replace it via [patch.crates-io]."
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
repo = { path = "../repo", package = "heddle-repo", version = "0.3", default-features = false, features = ["git-overlay", "native"] }

[lib]
path = "src/lib.rs"
name = "weft_client_shim"
