[package]
name = "weft-client-shim"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Trait surface for hosted client extensions to the Heddle CLI."
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
repo = { path = "../repo", package = "heddle-repo", version = "0.4", default-features = false, features = ["git-overlay", "native"] }

[lib]
path = "src/lib.rs"
name = "weft_client_shim"
