[package]
name = "heddle-iroh-transport-experiment"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
api = { package = "heddle-api", git = "https://github.com/HeddleCo/api", rev = "4dbdd3f1cd0b34f2f4a5ab74f6265d4b6c849c73" }
bytes.workspace = true
iroh.workspace = true
objects = { path = "../../crates/objects", package = "heddle-objects" }
prost.workspace = true
thiserror.workspace = true
tokio.workspace = true
wire = { path = "../../crates/wire", package = "heddle-wire" }

[dev-dependencies]
tempfile.workspace = true

[lib]
path = "src/lib.rs"
